# abridge-zubinpranesh

./: .gitignore  BUILD_LOG.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  api_dependencies.py  config.py  main.py
backend/app/adapters/: __init__.py  fixture_loader.py  fixture_provider.py
backend/app/agents/: __init__.py  disclosure_agent.py  evidence_mapper.py  evidence_retriever.py  gap_detector.py  packet_generator.py  policy_parser.py  verification_agent.py
backend/app/api/: __init__.py  case_service.py  errors.py  routes.py  schemas.py
backend/app/contracts/: __init__.py  _base.py  api.py  assessment.py  case.py  disclosure.py  events.py  evidence.py  form_draft.py  packet.py  policy.py  verification.py
backend/app/data/: __init__.py  abridge.py  errors.py  fhir_index.py  intake_mapping.py
backend/app/events/: __init__.py  recorder.py
backend/app/orchestration/: __init__.py  errors.py  gates.py  orchestrator.py  stage_runner.py
backend/app/ports/: __init__.py  case_repository.py  disclosure_filter.py  evidence_mapper.py  evidence_retriever.py  form_drafter.py  gap_detector.py  llm_provider.py  packet_generator.py  packet_verifier.py  policy_parser.py  workflow_orchestrator.py
backend/app/prompts/: __init__.py  library.py  registry.py
backend/app/providers/: __init__.py  anthropic_provider.py  config.py  errors.py  factory.py  mock_provider.py  response.py
backend/app/repositories/: __init__.py  errors.py  in_memory.py
backend/app/services/: __init__.py
backend/scripts/: list_abridge_records.py
(+185 files in other folders)
