[project]
name = "authlens-backend"
version = "0.1.0"
description = "AuthLens — point-of-capture prior authorization readiness agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "anthropic>=0.40",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "openapi-spec-validator>=0.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
